--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.2
+django-pymemcache==1.0.0
 django-ratelimit==4.1.0
 filelock==3.16.1
 fsspec==2024.10.0
@@ -12,9 +13,23 @@ MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.1.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 packaging==24.1
 protobuf==5.28.2
+pymemcache==4.0.0
 python-dotenv==1.0.1
+python-memcached==1.62
 PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
@@ -26,5 +41,6 @@ tokenizers==0.20.1
 torch==2.5.0
 tqdm==4.66.5
 transformers==4.45.2
+triton==3.1.0
 typing_extensions==4.12.2
 urllib3==2.2.3
